      removed.

      \item The deprecated legacy typedefs of \code{Sint} and
      \code{Sfloat} in header \file{R.h} are no longer defined, and that
      header no longer includes header \file{limits.h} from C nor
      \file{climits} from C++.

      \item New macro \code{CAD5R()} is provided in \file{Rinternals.h}
      and used in a few places in the \R sources.
    }
  }

  \subsection{UTILITIES}{
    \itemize{
      \item \command{R CMD check} does more checking of package \file{.Rd}
      files, warning about invalid email addresses and (some) invalid
      URIs and noting empty \samp{\item} labels in description lists.

      \item \command{R CMD check} now also reports problems when reading
      package news in md (file \file{NEWS.md}) and (optionally) plain
      text (file \file{NEWS}) formats.

      \item \env{_R_CHECK_TIMINGS_} defaults to a value from the
      environment even for \command{R CMD check --as-cran}; this allows
      for exceptionally fast or slow platforms.

      It now applies to checking PDF and HTML versions of the manuals,
      and \sQuote{checking CRAN incoming feasibility}.

      \item \command{R CMD check} can optionally (but included in
      \option{--as-cran}) check whether HTML math rendering \emph{via}
      KaTeX works for the package \file{.Rd} files.

      \item Non-interactive debugger invocations can be trapped by
      setting the environment variable
      \env{_R_CHECK_BROWSER_NONINTERACTIVE_} to a true value.  This is
      enabled by \command{R CMD check --as-cran} to detect the use of
      leftover \code{browser()} statements in the package.

      \item The use of \code{sprintf} and \code{vsprintf} from C/C++ has
      been deprecated in macOS 13 and is a known security risk.
      \command{R CMD check} now reports (on all platforms) if their use
      is found in compiled code: replace by \code{snprintf} or
      \code{vsnprintf} respectively. [\bold{NB:} whether such calls get