@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2016--2017   The R Core Team
+ *  Copyright (C) 2016--2023   The R Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -134,6 +134,7 @@ static void SET_ALTREP_CLASS(SEXP x, SEXP class)
 #define ALTRAW_METHODS_TABLE(x) GENERIC_METHODS_TABLE(x, altraw)
 #define ALTCOMPLEX_METHODS_TABLE(x) GENERIC_METHODS_TABLE(x, altcomplex)
 #define ALTSTRING_METHODS_TABLE(x) GENERIC_METHODS_TABLE(x, altstring)
+#define ALTLIST_METHODS_TABLE(x) GENERIC_METHODS_TABLE(x, altlist)
 
 #define ALTREP_METHODS						\
     R_altrep_UnserializeEX_method_t UnserializeEX;		\
@@ -196,6 +197,11 @@ static void SET_ALTREP_CLASS(SEXP x, SEXP class)
     R_altstring_Is_sorted_method_t Is_sorted;	\
     R_altstring_No_NA_method_t No_NA
 
+#define ALTLIST_METHODS                         \
+    ALTVEC_METHODS;                             \
+    R_altlist_Elt_method_t Elt;                 \
+    R_altlist_Set_elt_method_t Set_elt
+
 typedef struct { ALTREP_METHODS; } altrep_methods_t;
 typedef struct { ALTVEC_METHODS; } altvec_methods_t;
 typedef struct { ALTINTEGER_METHODS; } altinteger_methods_t;
@@ -204,6 +210,7 @@ typedef struct { ALTLOGICAL_METHODS; } altlogical_methods_t;
 typedef struct { ALTRAW_METHODS; } altraw_methods_t;
 typedef struct { ALTCOMPLEX_METHODS; } altcomplex_methods_t;
 typedef struct { ALTSTRING_METHODS; } altstring_methods_t;
+typedef struct { ALTLIST_METHODS; } altlist_methods_t;
 
 /* Macro to extract first element from ... macro argument.
    From Richard Hansen's answer in
@@ -223,6 +230,7 @@ typedef struct { ALTSTRING_METHODS; } altstring_methods_t;
 #define ALTRAW_DISPATCH(fun, ...) DO_DISPATCH(ALTRAW, fun, __VA_ARGS__)
 #define ALTCOMPLEX_DISPATCH(fun, ...) DO_DISPATCH(ALTCOMPLEX, fun, __VA_ARGS__)
 #define ALTSTRING_DISPATCH(fun, ...) DO_DISPATCH(ALTSTRING, fun, __VA_ARGS__)
+#define ALTLIST_DISPATCH(fun, ...) DO_DISPATCH(ALTLIST, fun, __VA_ARGS__)
 
 
 /*
@@ -541,6 +549,37 @@ int STRING_NO_NA(SEXP x)
     return ALTREP(x) ? ALTSTRING_DISPATCH(No_NA, x) : 0;
 }
 
+SEXP /*attribute_hidden*/ ALTLIST_ELT(SEXP x, R_xlen_t i)
+{
+    SEXP val = NULL;
+
+    /**** move GC disabling into method? */
+    if (R_in_gc)
+	error("cannot get ALTLIST_ELT during GC");
+    R_CHECK_THREAD;
+    int enabled = R_GCEnabled;
+    R_GCEnabled = FALSE;
+
+    val = ALTLIST_DISPATCH(Elt, x, i);
+
+    R_GCEnabled = enabled;
+    return val;
+}
+
+void attribute_hidden ALTLIST_SET_ELT(SEXP x, R_xlen_t i, SEXP v)
+{
+    /**** move GC disabling into method? */
+    if (R_in_gc)
+	error("cannot set ALTLIST_ELT during GC");
+    R_CHECK_THREAD;
+    int enabled = R_GCEnabled;
+    R_GCEnabled = FALSE;
+
+    ALTLIST_DISPATCH(Set_elt, x, i, v);
+
+    R_GCEnabled = enabled;
+}
+
 SEXP ALTINTEGER_SUM(SEXP x, Rboolean narm)
 {
     return ALTINTEGER_DISPATCH(Sum, x, narm);
@@ -801,6 +840,25 @@ static void altstring_Set_elt_default(SEXP x, R_xlen_t i, SEXP v)
 static int altstring_Is_sorted_default(SEXP x) { return UNKNOWN_SORTEDNESS; }
 static int altstring_No_NA_default(SEXP x) { return 0; }
 
+static SEXP altlist_Elt_default(SEXP x, R_xlen_t i)
+{
+    error("ALTLIST classes must provide an Elt method");
+}
+
+static void altlist_Set_elt_default(SEXP x, R_xlen_t i, SEXP v)
+{
+    error("ALTLIST classes must provide a Set_elt method");
+}
+
+static void *altlist_Dataptr_default(SEXP x, Rboolean writeable)
+{
+    error("ALTLIST classes do not have a Dataptr method");
+}
+
+static const void *altlist_Dataptr_or_null_default(SEXP x)
+{
+    error("ALTLIST classes do not have a Dataptr_or_null method");
+}
 
 /**
  ** ALTREP Initial Method Tables
@@ -925,6 +983,24 @@ static altstring_methods_t altstring_default_methods = {
 };
 
 
+
+static altlist_methods_t altlist_default_methods = {
+    .UnserializeEX = altrep_UnserializeEX_default,
+    .Unserialize = altrep_Unserialize_default,
+    .Serialized_state = altrep_Serialized_state_default,
+    .DuplicateEX = altrep_DuplicateEX_default,
+    .Duplicate = altrep_Duplicate_default,
+    .Coerce = altrep_Coerce_default,
+    .Inspect = altrep_Inspect_default,
+    .Length = altrep_Length_default,
+    .Dataptr = altlist_Dataptr_default,
+    .Dataptr_or_null = altlist_Dataptr_or_null_default,
+    .Extract_subset = altvec_Extract_subset_default,
+    .Elt = altlist_Elt_default,
+    .Set_elt = altlist_Set_elt_default
+};
+
+
 /**
  ** Class Constructors
  **/
@@ -958,6 +1034,7 @@ make_altrep_class(int type, const char *cname, const char *pname, DllInfo *dll)
     case RAWSXP:  MAKE_CLASS(class, altraw);     break;
     case CPLXSXP: MAKE_CLASS(class, altcomplex); break;
     case STRSXP:  MAKE_CLASS(class, altstring);  break;
+    case VECSXP:  MAKE_CLASS(class, altlist);    break;
     default: error("unsupported ALTREP class");
     }
     RegisterClass(class, type, cname, pname, dll);
@@ -976,6 +1053,7 @@ make_altrep_class(int type, const char *cname, const char *pname, DllInfo *dll)
     }
 
 DEFINE_CLASS_CONSTRUCTOR(altstring, STRSXP)
+DEFINE_CLASS_CONSTRUCTOR(altlist, VECSXP)
 DEFINE_CLASS_CONSTRUCTOR(altinteger, INTSXP)
 DEFINE_CLASS_CONSTRUCTOR(altreal, REALSXP)
 DEFINE_CLASS_CONSTRUCTOR(altlogical, LGLSXP)
@@ -991,6 +1069,7 @@ static void reinit_altrep_class(SEXP class)
     case LGLSXP: INIT_CLASS(class, altlogical); break;
     case RAWSXP: INIT_CLASS(class, altraw); break;
     case CPLXSXP: INIT_CLASS(class, altcomplex); break;
+    case VECSXP: INIT_CLASS(class, altlist); break;
     default: error("unsupported ALTREP class");
     }
 }
@@ -1008,6 +1087,18 @@ static void reinit_altrep_class(SEXP class)
 	m->MNAME = fun;							\
     }
 
+#define DEFINE_METHOD_SETTER_NOLIST(CNAME, MNAME)                       \
+    void R_set_##CNAME##_##MNAME##_method(R_altrep_class_t cls,         \
+                                          R_##CNAME##_##MNAME##_method_t fun) \
+    {                                                                   \
+        CNAME##_methods_t *m = CLASS_METHODS_TABLE(R_SEXP(cls));        \
+        if (m->MNAME == altlist_##MNAME##_default) {                    \
+            error("ALTLIST classes do not have a ##MNAME## method");    \
+        } else {                                                        \
+            m->MNAME = fun;                                             \
+        }                                                               \
+    }
+
 DEFINE_METHOD_SETTER(altrep, UnserializeEX)
 DEFINE_METHOD_SETTER(altrep, Unserialize)
 DEFINE_METHOD_SETTER(altrep, Serialized_state)
@@ -1017,8 +1108,8 @@ DEFINE_METHOD_SETTER(altrep, Coerce)
 DEFINE_METHOD_SETTER(altrep, Inspect)
 DEFINE_METHOD_SETTER(altrep, Length)
 
-DEFINE_METHOD_SETTER(altvec, Dataptr)
-DEFINE_METHOD_SETTER(altvec, Dataptr_or_null)
+DEFINE_METHOD_SETTER_NOLIST(altvec, Dataptr)
+DEFINE_METHOD_SETTER_NOLIST(altvec, Dataptr_or_null)
 DEFINE_METHOD_SETTER(altvec, Extract_subset)
 
 DEFINE_METHOD_SETTER(altinteger, Elt)
@@ -1054,6 +1145,8 @@ DEFINE_METHOD_SETTER(altstring, Set_elt)
 DEFINE_METHOD_SETTER(altstring, Is_sorted)
 DEFINE_METHOD_SETTER(altstring, No_NA)
 
+DEFINE_METHOD_SETTER(altlist, Elt)
+DEFINE_METHOD_SETTER(altlist, Set_elt)
 
 /**
  ** ALTREP Object Constructor and Utility Functions
