@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 1998--2022  The R Core Team.
+ *  Copyright (C) 1998--2023  The R Core Team.
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -81,6 +81,9 @@
 # endif
 #endif
 
+/* For speed in cases when the argument is known to not be an ALTREP list. */
+#define VECTOR_ELT_0(x,i)        ((SEXP *) DATAPTR(x))[i]
+#define SET_VECTOR_ELT_0(x,i, v) (((SEXP *) DATAPTR(x))[i] = (v))
 
 #define R_USE_SIGNALS 1
 #include <Defn.h>
@@ -704,7 +707,7 @@ static R_size_t R_NodesInUse = 0;
     { \
       R_xlen_t i; \
       for (i = 0; i < XLENGTH(__n__); i++) \
-	dc__str__action__(VECTOR_ELT(__n__, i), dc__extra__); \
+	dc__str__action__(VECTOR_ELT_0(__n__, i), dc__extra__); \
     } \
     break; \
   case EXPRSXP: \
@@ -712,7 +715,7 @@ static R_size_t R_NodesInUse = 0;
     { \
       R_xlen_t i; \
       for (i = 0; i < XLENGTH(__n__); i++) \
-	dc__action__(VECTOR_ELT(__n__, i), dc__extra__); \
+	dc__action__(VECTOR_ELT_0(__n__, i), dc__extra__); \
     } \
     break; \
   case ENVSXP: \
@@ -1350,13 +1353,13 @@ static SEXP R_weak_refs = NULL;
 #define FINALIZE_ON_EXIT(s) ((s)->sxpinfo.gp & FINALIZE_ON_EXIT_MASK)
 
 #define WEAKREF_SIZE 4
-#define WEAKREF_KEY(w) VECTOR_ELT(w, 0)
+#define WEAKREF_KEY(w) VECTOR_ELT_0(w, 0)
 #define SET_WEAKREF_KEY(w, k) SET_VECTOR_ELT(w, 0, k)
-#define WEAKREF_VALUE(w) VECTOR_ELT(w, 1)
+#define WEAKREF_VALUE(w) VECTOR_ELT_0(w, 1)
 #define SET_WEAKREF_VALUE(w, v) SET_VECTOR_ELT(w, 1, v)
-#define WEAKREF_FINALIZER(w) VECTOR_ELT(w, 2)
+#define WEAKREF_FINALIZER(w) VECTOR_ELT_0(w, 2)
 #define SET_WEAKREF_FINALIZER(w, f) SET_VECTOR_ELT(w, 2, f)
-#define WEAKREF_NEXT(w) VECTOR_ELT(w, 3)
+#define WEAKREF_NEXT(w) VECTOR_ELT_0(w, 3)
 #define SET_WEAKREF_NEXT(w, n) SET_VECTOR_ELT(w, 3, n)
 
 static SEXP MakeCFinalizer(R_CFinalizer_t cfun);
@@ -1855,12 +1858,12 @@ static int RunGenCollect(R_size_t size_needed)
 	SEXP t;
 	int nc = 0;
 	for (i = 0; i < LENGTH(R_StringHash); i++) {
-	    s = VECTOR_ELT(R_StringHash, i);
+	    s = VECTOR_ELT_0(R_StringHash, i);
 	    t = R_NilValue;
 	    while (s != R_NilValue) {
 		if (! NODE_IS_MARKED(CXHEAD(s))) { /* remove unused CHARSXP and cons cell */
 		    if (t == R_NilValue) /* head of list */
-			VECTOR_ELT(R_StringHash, i) = CXTAIL(s);
+			VECTOR_ELT_0(R_StringHash, i) = CXTAIL(s);
 		    else
 			CXTAIL(t) = CXTAIL(s);
 		    s = CXTAIL(s);
@@ -1871,7 +1874,7 @@ static int RunGenCollect(R_size_t size_needed)
 		t = s;
 		s = CXTAIL(s);
 	    }
-	    if(VECTOR_ELT(R_StringHash, i) != R_NilValue) nc++;
+	    if(VECTOR_ELT_0(R_StringHash, i) != R_NilValue) nc++;
 	}
 	SET_TRUELENGTH(R_StringHash, nc); /* SET_HASHPRI, really */
     }
@@ -3547,7 +3550,7 @@ void R_PreserveObject(SEXP object)
 	    R_PreciousList = allocVector(VECSXP, PHASH_SIZE);
 	int bin = PTRHASH(object) % PHASH_SIZE;
 	SET_VECTOR_ELT(R_PreciousList, bin,
-		       CONS(object, VECTOR_ELT(R_PreciousList, bin)));
+		       CONS(object, VECTOR_ELT_0(R_PreciousList, bin)));
     }
     else
 	R_PreciousList = CONS(object, R_PreciousList);
@@ -3562,7 +3565,7 @@ void R_ReleaseObject(SEXP object)
 	int bin = PTRHASH(object) % PHASH_SIZE;
 	SET_VECTOR_ELT(R_PreciousList, bin,
 		       DeleteFromList(object,
-				      VECTOR_ELT(R_PreciousList, bin)));
+				      VECTOR_ELT_0(R_PreciousList, bin)));
     }
     else
 	R_PreciousList =  DeleteFromList(object, R_PreciousList);
@@ -3660,7 +3663,7 @@ void R_PreserveInMSet(SEXP x, SEXP mset)
 	    error("Multi-set overflow");
 	SEXP newstore = PROTECT(allocVector(VECSXP, newsize));
 	for(R_xlen_t i = 0; i < size; i++)
-	    SET_VECTOR_ELT(newstore, i, VECTOR_ELT(store, i));
+	    SET_VECTOR_ELT(newstore, i, VECTOR_ELT_0(store, i));
 	SETCAR(mset, newstore);
 	UNPROTECT(1); /* newstore */
 	store = newstore;
@@ -3682,9 +3685,9 @@ void R_ReleaseFromMSet(SEXP x, SEXP mset)
 	return; /* not preserved */
     int *n = INTEGER(CDR(mset));
     for(R_xlen_t i = (*n) - 1; i >= 0; i--) {
-	if (VECTOR_ELT(store, i) == x) {
+	if (VECTOR_ELT_0(store, i) == x) {
 	    for(;i < (*n) - 1; i++)
-		SET_VECTOR_ELT(store, i, VECTOR_ELT(store, i + 1));
+		SET_VECTOR_ELT(store, i, VECTOR_ELT_0(store, i + 1));
 	    SET_VECTOR_ELT(store, i, R_NilValue);
 	    (*n)--;
 	    return;
@@ -3933,7 +3936,10 @@ SEXP (VECTOR_ELT)(SEXP x, R_xlen_t i) {
        TYPEOF(x) != WEAKREFSXP)
 	error("%s() can only be applied to a '%s', not a '%s'",
 	      "VECTOR_ELT", "list", type2char(TYPEOF(x)));
-    return CHK(VECTOR_ELT(CHK(x), i));
+    if (ALTREP(x))
+        return CHK(ALTLIST_ELT(CHK(x), i));
+    else
+        return CHK(VECTOR_ELT_0(CHK(x), i));
 }
 
 #ifdef CATCH_ZERO_LENGTH_ACCESS
@@ -4096,9 +4102,13 @@ SEXP (SET_VECTOR_ELT)(SEXP x, R_xlen_t i, SEXP v) {
     if (i < 0 || i >= XLENGTH(x))
 	error(_("attempt to set index %lld/%lld in SET_VECTOR_ELT"),
 	      (long long)i, (long long)XLENGTH(x));
-    FIX_REFCNT(x, VECTOR_ELT(x, i), v);
+    FIX_REFCNT(x, VECTOR_ELT_0(x, i), v);
     CHECK_OLD_TO_NEW(x, v);
-    return VECTOR_ELT(x, i) = v;
+    if (ALTREP(x))
+        ALTLIST_SET_ELT(x, i, v);
+    else
+        SET_VECTOR_ELT_0(x, i, v);
+    return v;
 }
 
 /* check for a CONS-like object */
